added docker file and put images in resource folder, for bootstraping some data